estruturando a section services

--- a/index.html
+++ b/index.html
@@ -113,7 +113,38 @@
 
       </div>
     </section>
-    
+    <section id="services">
+      <header>
+        <div class="text">
+          <h2>Meus serviços</h2>
+          <h1>Como posso ajudar o seu negócio</h1>
+        </div>
+      </header>
+      <div class="grid grid-3col">
+        <div class="card">
+          <img src="assets/icons/Devices.svg" alt="">
+          <header>
+            <h3>Websites e Aplicativos</h3>
+            <p>Desenvolvimento de interfaces</p>
+          </header>
+        </div>
+        <div class="card">
+          <img src="assets/icons/HardDrives.svg" alt="">
+          <header>
+            <h3>API e banco de dados</h3>
+            <p>Criação de serviços do sistema </p>
+          </header>
+          
+        </div>
+        <div class="card">
+          <img src="assets/icons/Infinity.svg" alt="">
+          <header>
+            <h3>DevOps</h3>
+            <p>Gestão e infraestrutura da aplicação</p>
+          </header>
+        </div>
+      </div>
+    </section>
   </main>
   
 </body>
